--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 			<a href = "index.html"><div id = "logo-img"></div>
 			<h1 id = "title"> AraLu Mallige Magazine
 				<div id = "kannadaTitle">
-				ಅರಳು ಮಲ್ಲಿಗೆ ಇ ಪತ್ರಿಕೆ
+				ಅರಳು ಮಲ್ಲಿಗೆ ಈ-ಪತ್ರಿಕೆ
 				</div> </h1></a>
 			<span id = "menu-bar">
 				<a href = "contact.html"><div id = "contact" class = "clicked"> Contact Us </div></a>
