--- a/team.html
+++ b/team.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<nav>
-			<a href = "index.html"><div id = "logo-img"></div><h1 id = "title"> AraLu Mallige Magazine <div id = "kannadaTitle"> ಅರಳು ಮಲ್ಲಿಗೆ ಇ ಪತ್ರಿಕೆ </div> </h1></a>
+			<a href = "index.html"><div id = "logo-img"></div><h1 id = "title"> AraLu Mallige Magazine <div id = "kannadaTitle"> ಅರಳು ಮಲ್ಲಿಗೆ ಈ-ಪತ್ರಿಕೆ </div> </h1></a>
 			<span id = "menu-bar">
 				<a href = "contact.html"><div id = "contact"> Contact Us </div></a>
 				<a href = "team.html"><div id = "team"  class = "clicked"> Team </div></a>
