--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>AraLu Mallige Magazine</title>
 	<link rel="stylesheet" href="css/styles.css">
-	<script src = "js/script.js"></script>
+
 	<link href="https://fonts.googleapis.com/css2?family=Lora:wght@600&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,600;1,500&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,13 +32,34 @@
 					<button class="openbtn" onclick="openNav()">☰ </button>  
 				</div>
 			</span>
-
-
 		</nav>
-
 	</header>
 	<div class = "page-title"> Home Page ~ Under construction :) </div>
+	</head>
+	<body>
+	<div class="slideshow-container">
 
+		<div class="mySlides fade">
+		  <img src="css/nj_home_page.jpg" style="width:60%">
+		  <div class="text">New Jersey Kannada Kali</div>
+		</div>
+
+		<div class="mySlides fade">
+		  <img src="css/dc_home_page.jpg" style="width:60%">
+		  <div class="text">DC Kannada Kali</div>
+		</div>
+
+		<div class="mySlides fade">
+		  <img src="css/ba_home_page.jpg" style="width:60%">
+		  <div class="text">Bay Area Kannada Kali</div>
+		</div>
 	</div>
+	<br>
+	<div class = "dot-container">
+	  <span class="dot"></span> 
+	  <span class="dot"></span> 
+	  <span class="dot"></span> 
+	</div>
+	<script src = "js/script.js"></script>
 </body>
 </html>
