--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 		</nav>
 	</header>
 	<div class = "page-title"> About AraLu Mallige </div>
-	<div class = "page-subtitle"> ಅರಳು ಮಲ್ಲಿಗೆ ಬಗ್ಗೆ </div>
+	<div class = "page-subtitle"> </div>
 
 	<div class = "about-content">
 		<i>(A working rough draft drawn from initial FAQ:)</i><br><br>
