--- a/release1.html
+++ b/release1.html
@@ -66,10 +66,10 @@
 			</video>
 			<hr>
 
-			<div class = "content-header"> </div>
+<!-- 			<div class = "content-header"> </div>
 			<video width = "50%" class = "video-content" style = "margin-left: 25%;" controls>
 				<source src = "css/Sumedha kannada kali.MOV" type="video/mp4">
-			</video>
+			</video> FILE IS TOO LARGE - USE YT LINK--> 
 
 		</div>
 	</div>
