--- a/release1.html
+++ b/release1.html
@@ -55,21 +55,21 @@
 			<div class = "content-categories">ಚಿನ್ನುಡಿ</div>
 
 			<div class = "content-header"> ದೀಪಾವಳಿ ~ ಸಮನ್ವಿತ</div>
-			<video width = "80%" class = "video-content" controls>
+			<video width = "80%" class = "video-content" controls poster = "css/samanvitha_poster.jpg">
 				<source src = "css/cinnuDi_Samanvitha's short saying on deepavali_KKNJ.mp4" type="video/mp4">
 			</video>
 			<hr>
 
 			<div class = "content-header"> Title ~ Name</div>
-			<video width = "30%" class = "video-content" style = "margin-left: 35%;" controls>
-				<source src = "css/cinnuDi_Anvi_KKNJ.mov" type="video/mp4">
+			<video width = "30%" class = "video-content" style = "margin-left: 35%;" controls poster = "css/anvi_poster.jpg">
+				<source src = "css/cinnuDi_Anvi_KKNJ.mov" type="video/mp4" >
 			</video>
 			<hr>
 
-<!-- 			<div class = "content-header"> </div>
+			<div class = "content-header"> </div>
 			<video width = "50%" class = "video-content" style = "margin-left: 25%;" controls>
 				<source src = "css/Sumedha kannada kali.MOV" type="video/mp4">
-			</video> FILE IS TOO LARGE - USE YT LINK--> 
+			</video>
 
 		</div>
 	</div>
