--- a/release1.html
+++ b/release1.html
@@ -65,11 +65,11 @@
 				<source src = "css/cinnuDi_Anvi_KKNJ.mov" type="video/mp4" >
 			</video>
 			<hr>
-
+<!-- 
 			<div class = "content-header"> </div>
 			<video width = "50%" class = "video-content" style = "margin-left: 25%;" controls>
 				<source src = "css/Sumedha kannada kali.MOV" type="video/mp4">
-			</video>
+			</video> USE YT LINK-->
 
 		</div>
 	</div>
