--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<a href = "releases.html" ><div id = "pr"> Releases </div></a>
 				<a href = "about.html"><div id = "about"> About</div></a>
 				<div id = "entirePanel">
-					<div id="mySidepanel" class="sidepanel">
+					<div id="mySidepanel" class="sidepanel homepage-sidepanel">
 					  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
 					  <a href="about.html" class = "panelMenu">About</a>
 					  <a href = "releases.html" class = "panelMenu"> Releases </a>
@@ -40,21 +40,20 @@
 	<div class="slideshow-container">
 
 		<div class="mySlides fade">
-		  <img src="css/nj_home_page.jpg" style="width:60%">
+		  <img src="css/nj_home_page.jpg" class = "slide-img">
 		  <div class="text">New Jersey Kannada Kali</div>
 		</div>
 
 		<div class="mySlides fade">
-		  <img src="css/dc_home_page.jpg" style="width:60%">
+		  <img src="css/dc_home_page.jpg" class = "slide-img">
 		  <div class="text">DC Kannada Kali</div>
 		</div>
 
 		<div class="mySlides fade">
-		  <img src="css/ba_home_page.jpg" style="width:60%">
+		  <img src="css/ba_home_page.jpg" class = "slide-img">
 		  <div class="text">Bay Area Kannada Kali</div>
 		</div>
 	</div>
-	<br>
 	<div class = "dot-container">
 	  <span class="dot"></span> 
 	  <span class="dot"></span> 
