--- a/release1.html
+++ b/release1.html
@@ -61,15 +61,15 @@
 			<hr>
 
 			<div class = "content-header"> Title ~ Name</div>
-			<video width = "30%" class = "video-content" style = "margin-left: 35%;" controls poster = "css/anvi_poster.jpg">
+			<video class = "video-content" id = "anvi-video" controls poster = "css/anvi_poster.jpg">
 				<source src = "css/cinnuDi_Anvi_KKNJ.mov" type="video/mp4" >
 			</video>
 			<hr>
-<!-- 
-			<div class = "content-header"> </div>
+
+<!-- 			<div class = "content-header"> </div>
 			<video width = "50%" class = "video-content" style = "margin-left: 25%;" controls>
 				<source src = "css/Sumedha kannada kali.MOV" type="video/mp4">
-			</video> USE YT LINK-->
+			</video> -->
 
 		</div>
 	</div>
