--- a/about.html
+++ b/about.html
@@ -4,14 +4,19 @@
 	<title>About | AraLu Mallige Magazine</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<script src = "js/script.js"></script>
-	<link href="https://fonts.googleapis.com/css2?family=Lora:wght@600&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,600;1,500&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@800&family=Benne&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<header>
 		<nav>
-			<a href = "index.html"><div id = "logo-img"></div><h1 id = "title"> AraLu Mallige Magazine <div id = "kannadaTitle"> ಅರಳು ಮಲ್ಲಿಗೆ ಈ-ಪತ್ರಿಕೆ </div> </h1></a>
+			<a href = "index.html">
+				<div id = "logo-img"></div>
+				<h1 id = "title"> ಅರಳು ಮಲ್ಲಿಗೆ ಈ-ಪತ್ರಿಕೆ
+					<div id = "kannadaTitle"> AraLu Mallige Magazine </div> 
+				</h1>
+			</a>
 			<span id = "menu-bar">
 				<a href = "contact.html"><div id = "contact"> Contact Us </div></a>
 				<a href = "team.html"><div id = "team"> Team </div></a>
@@ -31,14 +36,13 @@
 		</nav>
 	</header>
 	<div class = "page-title"> About AraLu Mallige </div>
-	<div class = "page-subtitle"> </div>
+	<div class = "page-subtitle"> <!-- ಅರಳು ಮಲ್ಲಿಗೆ ಬಗ್ಗೆ  --></div>
 
 	<div class = "about-content">
-		<i>(A working rough draft drawn from initial FAQ:)</i><br><br>
 		AraLu Mallige Magazine is a quarterly distributed informational newspaper/magazine, only available in electronic medium. The magazine is completely run by students: older students are on the editorial board, and all Kannada Kali students can participate in submitting original magazine content. Adult mentors support us if and when requested to do so. Please see our team members <a href = "team.html"> here</a>.
 		<br>
 		<br>
-		Our initiative was conceived to provide the younger generation another opportunity to hone their Kannada language, public speaking, and writing skills. In addition, the magazine gets our youth involved in our community cultural events and helps them learn about our language and culture.
+		Our initiative was conceived to provide the younger generation another opportunity to hone their Kannada language, public speaking, and writing skills. In addition, the magazine involves our youth in our community cultural events and helps them learn about our language and culture.
 		<br>
 		<br>
 		There are several Kannada publications; how is this any different?
