--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,17 @@
 	<title>Contact | AraLu Mallige Magazine</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<script src = "js/script.js"></script>
-	<link href="https://fonts.googleapis.com/css2?family=Lora:wght@600&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,600;1,500&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@800&family=Benne&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<header>
 		<nav>
 			<a href = "index.html"><div id = "logo-img"></div>
-			<h1 id = "title"> AraLu Mallige Magazine
+			<h1 id = "title"> ಅರಳು ಮಲ್ಲಿಗೆ ಈ-ಪತ್ರಿಕೆ
 				<div id = "kannadaTitle">
-				ಅರಳು ಮಲ್ಲಿಗೆ ಈ-ಪತ್ರಿಕೆ
+				 AraLu Mallige Magazine
 				</div> </h1></a>
 			<span id = "menu-bar">
 				<a href = "contact.html"><div id = "contact" class = "clicked"> Contact Us </div></a>
