--- a/team.html
+++ b/team.html
@@ -4,14 +4,17 @@
 	<title> Team | AraLu Mallige Magazine</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<script src = "js/script.js"></script>
-	<link href="https://fonts.googleapis.com/css2?family=Lora:wght@600&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,600;1,500&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@800&family=Benne&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<header>
 		<nav>
-			<a href = "index.html"><div id = "logo-img"></div><h1 id = "title"> AraLu Mallige Magazine <div id = "kannadaTitle"> ಅರಳು ಮಲ್ಲಿಗೆ ಈ-ಪತ್ರಿಕೆ </div> </h1></a>
+			<a href = "index.html"><div id = "logo-img"></div><h1 id = "title"> ಅರಳು ಮಲ್ಲಿಗೆ ಈ-ಪತ್ರಿಕೆ
+				<div id = "kannadaTitle">
+				 AraLu Mallige Magazine
+				</div> </h1></a>
 			<span id = "menu-bar">
 				<a href = "contact.html"><div id = "contact"> Contact Us </div></a>
 				<a href = "team.html"><div id = "team"  class = "clicked"> Team </div></a>
@@ -32,13 +35,13 @@
 		</nav>
 	</header>
 	<div class = "page-title"> AraLu Mallige's Team </div>
-	<div class = "page-subtitle"> <i> Kannada translation</i> </div>
+	<div class = "page-subtitle">  ಅರಳು ಮಲ್ಲಿಗೆ ತಂಡ </div>
 
 	<div class = "team-content">
 		<div class = "branch-logo-section">
-			<div class = "branch-logo-containers"> <a href = "https://www.kannadakalinj.com/" target = "_blank"> <img src="css/kk-logo-nj.png"id = "NJ" class = "branch-logos"> </img> <div class = "branch-names"> Kannada Kali New Jersey</div></a></div>
-			<div class = "branch-logo-containers"> <a href = "http://www.kaverionline.org/" target = "_blank"> <img src = "css/kannadakaliyonalogo-dc.png"id = "DC" class = "branch-logos"> </img> <div class = "branch-names"> Kannada Kali Virginia </div></a></div>
-			<div class = "branch-logo-containers"> <a href = "https://www.bakannadakali.org/" target = "_blank"> <img src = "css/kkaliLogo_trans-ba.png"id = "BA" class = "branch-logos"> </img> <div class = "branch-names"> Kannada Kali Bay Area </div></a></div>
+			<div class = "branch-logo-containers"> <a href = "https://www.kannadakalinj.com/" target = "_blank"> <img src="css/kk-logo-nj.png"id = "NJ" class = "branch-logos"> </img> <div class = "branch-names"> New Jersey</div></a></div>
+			<div class = "branch-logo-containers"> <a href = "http://www.kaverionline.org/" target = "_blank"> <img src = "css/kannadakaliyonalogo-dc.png"id = "DC" class = "branch-logos"> </img> <div class = "branch-names"> DMV </div></a></div>
+			<div class = "branch-logo-containers"> <a href = "https://www.bakannadakali.org/" target = "_blank"> <img src = "css/kkaliLogo_trans-ba.png"id = "BA" class = "branch-logos"> </img> <div class = "branch-names"> Bay Area </div></a></div>
 		</div>
 	</div>
 
