--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 		<nav>
 			<a href = "index.html">
 				<div id = "logo-img"></div>
-				<h1 id = "title"> ಅರಳು ಮಲ್ಲಿಗೆ ಈ-ಪತ್ರಿಕೆ
+				<h1 id = "title"> ಅರಳು ಮಲ್ಲಿಗೆ ಇ-ಪತ್ರಿಕೆ
 					<div id = "kannadaTitle"> AraLu Mallige Magazine </div> 
 				</h1>
 			</a>
