--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header>
 		<nav>
 			<a href = "index.html"><div id = "logo-img"></div>
-			<h1 id = "title"> ಅರಳು ಮಲ್ಲಿಗೆ ಈ-ಪತ್ರಿಕೆ
+			<h1 id = "title"> ಅರಳು ಮಲ್ಲಿಗೆ ಇ-ಪತ್ರಿಕೆ
 				<div id = "kannadaTitle">
 				 AraLu Mallige Magazine
 				</div> </h1> </a>
