--- a/team.html
+++ b/team.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<nav>
-			<a href = "index.html"><div id = "logo-img"></div><h1 id = "title"> ಅರಳು ಮಲ್ಲಿಗೆ ಈ-ಪತ್ರಿಕೆ
+			<a href = "index.html"><div id = "logo-img"></div><h1 id = "title"> ಅರಳು ಮಲ್ಲಿಗೆ ಇ-ಪತ್ರಿಕೆ
 				<div id = "kannadaTitle">
 				 AraLu Mallige Magazine
 				</div> </h1></a>
