--- a/release1.html
+++ b/release1.html
@@ -122,7 +122,7 @@
 
 					<div class = "content-container">
 						<div class = "content-header"> ನವರಾತ್ರಿ ಹಬ್ಬ - Arush  </div> <!-- kaveri nadi -->
-						<a href = "css/cinnuDi_ನವರಾತ್ರಿ ಹಬ್ಬ-Arush Karwal_KKNJ.jpg" target = "_blank"><img class = "img-content" src = "css/cinnuDi_ನವರಾತ್ರಿ ಹಬ್ಬ-Arush Karwal_KKNJ.jpg" style = "width: 95%; margin-left: 2%"> </a>
+						<a href = "css/cinnuDi_ನವರಾತ್ರಿ ಹಬ್ಬ-Arush Karwal_KKNJ.jpg" target = "_blank"><img class = "img-content" src = "css/cinnuDi_Arush Karwal_KKNJ.jpg" style = "width: 95%; margin-left: 2%"> </a>
 					</div>
 					<div class = "content-container">
 						<div class = "content-header"> ಅಮೇರಿಕಾ ಹುಟ್ಟಿದ್ದು ಹೇಗೆ? - Abhiram  </div> <!-- kaveri nadi -->
@@ -138,7 +138,7 @@
 				<div id = "right-third">
 					<div class = "content-container">
 						<div class = "content-header"> ಚದುರಂಗದ​ ಆಟ – ಭಾಗ 1 - Gahan </div> <!-- kaveri nadi -->
-						<a href = "css/chow chow baat_ಚದುರಂಗ ಆಟ Part 1- ಗಹನ್ ಮೊಟ್ಟನ್ನ_KKNJ.jpg" target = "_blank"><img class = "img-content"  src = "css/chow chow baat_ಚದುರಂಗ ಆಟ Part 1- ಗಹನ್ ಮೊಟ್ಟನ್ನ_KKNj.jpg" style = "width: 95%; margin-left: 2%"> </a>
+						<a href = "css/chow chow baat_ಚದುರಂಗ ಆಟ Part 1- ಗಹನ್ ಮೊಟ್ಟನ್ನ_KKNJ.jpg" target = "_blank"><img class = "img-content"  src = "css/chow chow baat_Part 1-_KKNJ.jpg" style = "width: 95%; margin-left: 2%"> </a>
 					</div>
 					<div class = "content-container">
 						<div class = "content-header"> ತರಕಾರಿ ತೋಟ - Anvi </div>
@@ -269,7 +269,7 @@
 				<div id = "right-third">
 					<div class = "content-container">
 						<div class = "content-header"> ಅಮ್ಮ​ - Ved</div>
-						<a href = "css/ciTa paTa_Ved’s drawing_KKNJ.jpg" target = "_blank"><img class = "img-content" src = "css/ciTa paTa_Ved’s drawing_KKNJ.jpg" style = "width: 60%; margin-left: 20%"> </a>
+						<a href = "css/ciTa paTa_Ved’s drawing_KKNJ.jpg" target = "_blank"><img class = "img-content" src = "css/ciTa paTa_Veds drawing_KKNJ.jpg" style = "width: 60%; margin-left: 20%"> </a>
 					</div>
 					<div class = "content-container">
 						<div class = "content-header"> ಚುಟುಕುಗಳು - Hamsini</div>
