--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	</header>
 
 
-	<div class = "page-title"> Home Page ~ Under construction :) </div>
+	<div class = "page-title"> Home Page </div>
 	<body>
 	<div class="slideshow-container">
 
