--- a/releases.html
+++ b/releases.html
@@ -12,7 +12,7 @@
 	<header>
 		<nav>
 			<a href = "index.html"><div id = "logo-img"></div>
-			<h1 id = "title"> ಅರಳು ಮಲ್ಲಿಗೆ ಇ-ಪತ್ರಿಕೆ
+			<h1 id = "title"> ಅರಳು ಮಲ್ಲಿಗೆ ಈ-ಪತ್ರಿಕೆ
 				<div id = "kannadaTitle">
 				 AraLu Mallige Magazine
 				</div> </h1></a>
@@ -40,10 +40,10 @@
 
 	<div id = "releases-tiles">
 		<div class = "tile-container">
-			<a href = "release1.html"> <div class = "tile"><span>RELEASE 1-April 2021</span></div></a>
+			<a href = "release1.html"> <div class = "tile"><img src = "css/release1-thumbnail.png" style = "padding-top: 2%"> </img><span>RELEASE 1-April 2021</span></div></a>
 		</div>
 		<div class = "tile-container">
-			<a href = "#"> <div class = "tile"><span>RELEASE 2 - COMING SOON!</span></div></a>
+			<a href = "#"> <div class = "tile" style = "padding-top: 65%" ><span>RELEASE 2 - COMING SOON!</span></div></a>
 		</div>
 <!-- 		<div class = "tile-container">
 			<a href = "#"> <div class = "tile"><span>Release 3</span></div></a>
