--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header>
 		<nav>
 			<a href = "index.html"><div id = "logo-img"></div>
-			<h1 id = "title"> ಅರಳು ಮಲ್ಲಿಗೆ ಇ-ಪತ್ರಿಕೆ
+			<h1 id = "title"> ಅರಳು ಮಲ್ಲಿಗೆ ಈ-ಪತ್ರಿಕೆ
 				<div id = "kannadaTitle">
 				 AraLu Mallige Magazine
 				</div> </h1> </a>
@@ -36,29 +36,69 @@
 	</header>
 
 
-	<div class = "page-title"> Home Page </div>
+	<div class = "page-title"> ಅರಳು ಮಲ್ಲಿಗೆ -  ವಿನೂತನ ವಿಚಾರಗಳು </div>
 	<body>
+		<div class = "home-content">
+			ವಿದೇಶದಲ್ಲಿ ಕನ್ನಡ ಕಲಿಯುತ್ತಿರುವ ಮಕ್ಕಳಿಗೆ ತಮ್ಮ ಅನಿಸಿಕೆ ಮತ್ತು ಸುತ್ತಮುತ್ತಲಿನ ಸಮಾಚಾರಗಳನ್ನು  ಹಂಚಿಕೊಳ್ಳಲು ನಿರ್ಮಿಸಿದ  ಒಂದು ಅಂತರ್ಜಾಲ ತಾಣ - ಅರಳುಮಲ್ಲಿಗೆ.  ದೂರ ದೇಶಗಳಲ್ಲಿ  ಅರಳುತ್ತಿರುವ ಈ ಮಲ್ಲಿಗೆಗಳ ದೃಷ್ಟಿಕೋನದಲ್ಲಿ  ಸುದ್ದಿ ಸಮಾಚಾರಗಳನ್ನು ತಿಳಿದುಕೊಳ್ಳುವ ಅವಕಾಶ ಅತ್ಯ ಅಮೂಲ್ಯವಾದುದು  ಎಂದರೆ ಸುಳ್ಳಾಗಲಾರದು.
+		</div>
 	<div class="slideshow-container">
 
 		<div class="mySlides fade">
-		  <img src="css/nj_home_page.jpg" class = "slide-img">
-		  <div class="text">New Jersey Kannada Kali</div>
+		  <img src="css/home-page-imgs/home-img-1.jpeg" class = "slide-img">
+		  <!-- <div class="text">New Jersey Kannada Kali</div> -->
 		</div>
-
 		<div class="mySlides fade">
-		  <img src="css/dc_home_page.jpg" class = "slide-img">
-		  <div class="text">DC Kannada Kali</div>
+		  <img src="css/home-page-imgs/dc_home_page.jpg" class = "slide-img">
+		  <!-- <div class="text">DC Kannada Kali</div> -->
 		</div>
-
 		<div class="mySlides fade">
-		  <img src="css/ba_home_page.jpg" class = "slide-img">
-		  <div class="text">Bay Area Kannada Kali</div>
+		  <img src="css/home-page-imgs/ba_home_page.jpg" class = "slide-img">
+		  <!-- <div class="text">Bay Area Kannada Kali</div> -->
+		</div>
+		<div class="mySlides fade">
+		  <img src="css/home-page-imgs/home-img-2.jpeg" class = "slide-img">
+		  <!-- <div class="text">New Jersey Kannada Kali</div> -->
+		</div>
+		<div class="mySlides fade">
+		  <img src="css/home-page-imgs/home-img-3.jpeg" class = "slide-img">
+		  <!-- <div class="text">New Jersey Kannada Kali</div> -->
+		</div>
+		<div class="mySlides fade">
+		  <img src="css/home-page-imgs/home-img-4.jpeg" class = "slide-img">
+		  <!-- <div class="text">New Jersey Kannada Kali</div> -->
+		</div>
+		<div class="mySlides fade">
+		  <img src="css/home-page-imgs/home-img-5.jpeg" class = "slide-img">
+		  <!-- <div class="text">New Jersey Kannada Kali</div> -->
+		</div>
+		<div class="mySlides fade">
+		  <img src="css/home-page-imgs/home-img-6.jpeg" class = "slide-img">
+		  <!-- <div class="text">New Jersey Kannada Kali</div> -->
+		</div>
+		<div class="mySlides fade">
+		  <img src="css/home-page-imgs/home-img-7.jpeg" class = "slide-img">
+		  <!-- <div class="text">New Jersey Kannada Kali</div> -->
+		</div>
+		<div class="mySlides fade">
+		  <img src="css/home-page-imgs/home-img-8.jpeg" class = "slide-img">
+		  <!-- <div class="text">New Jersey Kannada Kali</div> -->
 		</div>
 	</div>
 	<div class = "dot-container">
 	  <span class="dot"></span> 
 	  <span class="dot"></span> 
+	  <span class="dot"></span>
+
 	  <span class="dot"></span> 
+	  <span class="dot"></span> 
+	  <span class="dot"></span>
+
+	  <span class="dot"></span> 
+	  <span class="dot"></span> 
+	  <span class="dot"></span>
+
+	  <span class="dot"></span> 
+	  <span class="dot"></span>
 	</div>
 	<script src = "js/script.js"></script>
 </body>
