--- a/release1.html
+++ b/release1.html
@@ -12,7 +12,7 @@
 	<header>
 		<nav>
 			<a href = "index.html"><div id = "logo-img"></div>
-			<h1 id = "title"> ಅರಳು ಮಲ್ಲಿಗೆ ಇ-ಪತ್ರಿಕೆ
+			<h1 id = "title"> ಅರಳು ಮಲ್ಲಿಗೆ ಈ-ಪತ್ರಿಕೆ
 				<div id = "kannadaTitle">
 				 AraLu Mallige Magazine
 				</div> </h1></a>
@@ -37,11 +37,11 @@
 	<div class = "page-content">
 		<div class = "page-title"> Release 1: April 2021 <div id = "release-page-sub"> Note: Click on drawings and articles to view enlarged version in new tab. </div>
 				<div id = "second-header">
-					<div class = "release-categories release-categories-clicked" onclick="openColumn('1')"id = "tab1"> 1 </div>
-					<div class = "release-categories" onclick="openColumn('2')" id = "tab2"> 2</div>
-					<div class = "release-categories" onclick="openColumn('3')"id = "tab3"> 3</div>
-					<div class = "release-categories" onclick="openColumn('4')"id = "tab4"> 4</div>
-					<div class = "release-categories" onclick="openColumn('5')"id = "tab5"> 5</div>
+					<div class = "release-categories release-categories-clicked" onclick="openColumn('1', 5)"id = "tab1"> 1 </div>
+					<div class = "release-categories" onclick="openColumn('2', 5)" id = "tab2"> 2</div>
+					<div class = "release-categories" onclick="openColumn('3', 5)"id = "tab3"> 3</div>
+					<div class = "release-categories" onclick="openColumn('4', 5)"id = "tab4"> 4</div>
+					<div class = "release-categories" onclick="openColumn('5', 5)"id = "tab5"> 5</div>
 				</div>
 		<div id = "page1">
 			<div class = "container">
@@ -122,7 +122,7 @@
 
 					<div class = "content-container">
 						<div class = "content-header"> ನವರಾತ್ರಿ ಹಬ್ಬ - Arush  </div> <!-- kaveri nadi -->
-						<a href = "css/cinnuDi_ನವರಾತ್ರಿ ಹಬ್ಬ-Arush Karwal_KKNJ.jpg" target = "_blank"><img class = "img-content" src = "css/cinnuDi_Arush Karwal_KKNJ.jpg" style = "width: 95%; margin-left: 2%"> </a>
+						<a href = "css/cinnuDi_ನವರಾತ್ರಿ ಹಬ್ಬ-Arush Karwal_KKNJ.jpg" target = "_blank"><img class = "img-content" src = "css/cinnuDi_ನವರಾತ್ರಿ ಹಬ್ಬ-Arush Karwal_KKNJ.jpg" style = "width: 95%; margin-left: 2%"> </a>
 					</div>
 					<div class = "content-container">
 						<div class = "content-header"> ಅಮೇರಿಕಾ ಹುಟ್ಟಿದ್ದು ಹೇಗೆ? - Abhiram  </div> <!-- kaveri nadi -->
@@ -138,7 +138,7 @@
 				<div id = "right-third">
 					<div class = "content-container">
 						<div class = "content-header"> ಚದುರಂಗದ​ ಆಟ – ಭಾಗ 1 - Gahan </div> <!-- kaveri nadi -->
-						<a href = "css/chow chow baat_ಚದುರಂಗ ಆಟ Part 1- ಗಹನ್ ಮೊಟ್ಟನ್ನ_KKNJ.jpg" target = "_blank"><img class = "img-content"  src = "css/chow chow baat_Part 1-_KKNJ.jpg" style = "width: 95%; margin-left: 2%"> </a>
+						<a href = "css/chow chow baat_ಚದುರಂಗ ಆಟ Part 1- ಗಹನ್ ಮೊಟ್ಟನ್ನ_KKNJ.jpg" target = "_blank"><img class = "img-content"  src = "css/chow chow baat_ಚದುರಂಗ ಆಟ Part 1- ಗಹನ್ ಮೊಟ್ಟನ್ನ_KKNj.jpg" style = "width: 95%; margin-left: 2%"> </a>
 					</div>
 					<div class = "content-container">
 						<div class = "content-header"> ತರಕಾರಿ ತೋಟ - Anvi </div>
@@ -269,7 +269,7 @@
 				<div id = "right-third">
 					<div class = "content-container">
 						<div class = "content-header"> ಅಮ್ಮ​ - Ved</div>
-						<a href = "css/ciTa paTa_Ved’s drawing_KKNJ.jpg" target = "_blank"><img class = "img-content" src = "css/ciTa paTa_Veds drawing_KKNJ.jpg" style = "width: 60%; margin-left: 20%"> </a>
+						<a href = "css/ciTa paTa_Ved’s drawing_KKNJ.jpg" target = "_blank"><img class = "img-content" src = "css/ciTa paTa_Ved’s drawing_KKNJ.jpg" style = "width: 60%; margin-left: 20%"> </a>
 					</div>
 					<div class = "content-container">
 						<div class = "content-header"> ಚುಟುಕುಗಳು - Hamsini</div>
